# openai-projects

./: README.md
founder-copilot/: .env.example  Dockerfile  EXAMPLE_QUESTIONS.md  MULTI_ASSISTANT_ROUTING.md  README.md  SYSTEM_EXPLANATION.md  docker-compose.yml  requirements.txt
founder-copilot-response/: .env.example  .gitignore  Dockerfile  EXAMPLE_QUESTIONS.md  MIGRATION_EXPERIENCE.md  MULTI_ASSISTANT_ROUTING.md  README.md  docker-compose.yml  requirements.txt
gir-caddie-mvp/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
gpt-eval-kit/: .gitignore  README.md  pyproject.toml
gpt-eval-kit/.github/workflows/: evals.yml
gpt-eval-kit/baselines/main/: summary.json
gpt-eval-kit/baselines/rag_core/: summary.json
gpt-eval-kit/baselines/routing_core/: summary.json
gpt-eval-kit/baselines/safety_refusal/: summary.json
gpt-eval-kit/baselines/tool_use/: summary.json
gpt-eval-kit/cases/suites/: rag_core.jsonl  routing_core.jsonl  safety_refusal.jsonl  tool_use.jsonl
gpt-eval-kit/evalkit/: cli.py
gpt-eval-kit/evalkit/adapters/: __init__.py  _fixtures.py  http_app.py  offline.py  openai_responses.py  test_openai_parsing.py
gpt-eval-kit/evalkit/reporting/: __init__.py  diffing.py  reporter.py
gpt-eval-kit/evalkit/rubrics/: default_quality.yaml
gpt-eval-kit/evalkit/runners/: __init__.py  runner.py
gpt-eval-kit/evalkit/scoring/: __init__.py  deterministic.py  metrics.py  rubric_judge.py  schemas.py
k-food-helpdesk/: .env.example  .gitignore  README.md  docker-compose.yml
teachme-live/: .dockerignore  (+8 more)
(+75 files in other folders)
